--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@capacitor/android": "^4.6.1",
+    "@capacitor/core": "^4.6.1",
+    "@capacitor/ios": "^4.6.1",
     "faker": "^5.5.3",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
@@ -36,6 +39,7 @@
     "@angular-devkit/build-angular": "^14.2.6",
     "@angular/cli": "~14.2.6",
     "@angular/compiler-cli": "^14.2.0",
+    "@capacitor/cli": "^4.6.1",
     "@types/jasmine": "~4.0.0",
     "electron": "^22.0.0",
     "jasmine-core": "~4.3.0",
